# Space4AI

./: .astylerc  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  compose.yml  config_template.json  requirements.txt
WebServer/: app.py  requirements.txt
apps/: CMakeLists.txt  main.cpp  main_ScalabAnalysis.cpp  main_app.cpp  main_check.cpp  main_dt_scalability_analysis.cpp  main_dt_solver.cpp  main_json.cpp  main_rt_solver.cpp  main_runnEx_analysis.cpp
apps/oldStuff/: main_check.cpp  main_rt_reconfig_test.cpp
cmake/: makeDoxygen.cmake
config/: config_dt_solver.json  config_lambda.json  config_rt_solver.json  config_runnEx.json  config_scaAna.json  config_template.json  prova.json
config/GeneralWorkflows/10-components/: system_description4.json  system_description6.json  system_description9.json
config/GeneralWorkflows/15-components/: system_description1.json  system_description2.json  system_description3.json  system_description7.json  system_description8.json
config/GeneralWorkflows/5-components/: system_description1.json  system_description2.json  system_description3.json  system_description5.json  system_description7.json  system_description9.json
config/GeneralWorkflows/7-components/: system_description1.json  system_description4.json  system_description7.json  system_description9.json
config/RunningExample/: system_description_scenario1.json  system_description_scenario2.json  system_description_scenario3.json
config/config_apps/: config_main_app.json
config/config_tests/: .config_test1_parallel.json.swp  config_test1.json  config_test1_parallel.json  config_test3.json
config/config_tests/SystemConfigs/: Random_Greedy_Pacsltk.json
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
doc/html/: Component_8hpp.html  Component_8hpp__dep__incl.map  Component_8hpp__dep__incl.md5  Component_8hpp__incl.map  Component_8hpp__incl.md5  Component_8hpp_source.html  Dag_8cpp.html  Dag_8cpp__incl.map  Dag_8cpp__incl.md5  Dag_8hpp.html  Dag_8hpp__dep__incl.map  Dag_8hpp__dep__incl.md5  Dag_8hpp__incl.map  Dag_8hpp__incl.md5  Dag_8hpp_source.html  EliteResult_8hpp.html  EliteResult_8hpp__dep__incl.map  EliteResult_8hpp__dep__incl.md5  EliteResult_8hpp__incl.map  EliteResult_8hpp__incl.md5  EliteResult_8hpp_source.html  GlobalConstraint_8hpp.html  GlobalConstraint_8hpp__dep__incl.map  GlobalConstraint_8hpp__dep__incl.md5  GlobalConstraint_8hpp__incl.map  GlobalConstraint_8hpp__incl.md5  GlobalConstraint_8hpp_source.html  LocalConstraint_8hpp.html  LocalConstraint_8hpp__dep__incl.map  LocalConstraint_8hpp__dep__incl.md5  LocalConstraint_8hpp__incl.map  LocalConstraint_8hpp__incl.md5  LocalConstraint_8hpp_source.html  Logger_8hpp.html  Logger_8hpp__dep__incl.map  Logger_8hpp__dep__incl.md5  Logger_8hpp__incl.map  Logger_8hpp__incl.md5  Logger_8hpp_source.html  NetworkTechnology_8hpp.html  (+277 more)
doc/latex/: CMakeLists_8txt.tex  Component_8hpp.tex  Component_8hpp__dep__incl.md5  Component_8hpp__incl.md5  Dag_8cpp.tex  Dag_8cpp__incl.md5  Dag_8hpp.tex  Dag_8hpp__dep__incl.md5  Dag_8hpp__incl.md5  EliteResult_8cpp.tex  EliteResult_8cpp__incl.md5  EliteResult_8hpp.tex  EliteResult_8hpp__dep__incl.md5  EliteResult_8hpp__incl.md5  GlobalConstraint_8hpp.tex  GlobalConstraint_8hpp__dep__incl.md5  GlobalConstraint_8hpp__incl.md5  LocalConstraint_8hpp.tex  LocalConstraint_8hpp__dep__incl.md5  LocalConstraint_8hpp__incl.md5  Logger_8hpp.tex  Logger_8hpp__dep__incl.md5  Logger_8hpp__incl.md5  NetworkTechnology_8hpp.tex  NetworkTechnology_8hpp__dep__incl.md5  NetworkTechnology_8hpp__incl.md5  PerformanceFactory_8hpp.tex  PerformanceFactory_8hpp__dep__incl.md5  PerformanceFactory_8hpp__incl.md5  PerformanceModels_8cpp.tex  PerformanceModels_8cpp__incl.md5  PerformanceModels_8hpp.tex  PerformanceModels_8hpp__dep__incl.md5  PerformanceModels_8hpp__incl.md5  PerformancePredictors_8hpp.tex  PerformancePredictors_8hpp__dep__incl.md5  PerformancePredictors_8hpp__incl.md5  RandomGreedyDT_8cpp.tex  RandomGreedyDT_8cpp__incl.md5  RandomGreedyDT_8hpp.tex  (+103 more)
extras/Python/: PACSLTK.py
scripts/: Kernel.dockerfile  WebServer.dockerfile  kernel-command.sh  server-command.sh
src/: CMakeLists.txt  Initializer.hpp  Logger.hpp  NetworkTechnology.hpp  Resources.hpp  TypeTraits.hpp  s4ai.hpp
src/Algorithms/: LocalSearch.cpp  LocalSearch.hpp  LocalSearchManager.cpp  LocalSearchManager.hpp  ParallelConfig.hpp.in  RandomGreedy.cpp  RandomGreedy.cpp.in  RandomGreedy.hpp  RandomGreedyDT.cpp  RandomGreedyDT.cpp.in  RandomGreedyDT.hpp
src/Constraints/: GlobalConstraint.hpp  LocalConstraint.hpp
src/Graph/: Component.hpp  Dag.cpp  Dag.hpp
src/Performance/: PerformanceFactory.hpp  PerformanceModels.cpp  PerformanceModels.hpp  PerformancePredictors.cpp  PerformancePredictors.hpp  PerformancePredictors.hpp.in  SystemPE.cpp  SystemPE.hpp
src/Solution/: EliteResult.cpp  EliteResult.hpp  SelectedResources.hpp  Solution.cpp  Solution.hpp  SolutionData.hpp
src/System/: System.cpp  System.hpp  SystemData.cpp  SystemData.hpp
src/src/: Makefile  cmake_install.cmake
tests/: CMakeLists.txt  main_test.cpp  main_test1.cpp  main_test4.cpp  main_test_dt_localsearch.cpp  main_test_logger.cpp  main_test_parallel.cpp  main_test_rt_localsearch.cpp
tests/config_tests/: config_test1.json  config_test1_parallel.json  config_test2.json  config_test4.json  config_test_dt_localsearch.json  config_test_logger.json  config_test_rt_localsearch.json
tests/config_tests/DTSolutions/: Sol_system_description1_10c.json  Sol_system_description1_15c.json  Sol_system_description1_5c.json  Sol_system_description1_7c.json
tests/config_tests/SystemConfigs/: system_description1_10c.json
utilities/: bimodal.py  dl_utilities.py  lambda_1hour.json  lambda_2hour_s2.json  workload_generation_example.py
utilities/ExperimentalAnalysis/: PlotByLambda.py  PlotScaAna.py  README.md  Sol_RunningExample_system_description_scenario1.json  Sol_RunningExample_system_description_scenario2.json  Sol_RunningExample_system_description_scenario3.json
utilities/UseCaseLambdas/: lambda_1hour_s2.json  lambda_1hour_s3.json
(+336 files in other folders)
